--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="text-light"><a href="index.html">문준영</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/1997MJ" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://mjcoding.tistory.com/" class="tistory"><i class="bx bx-home"></i></a>
+          <a href="https://mjcoding.tistory.com/" class="tistory"><i class="bx bxl-blogger"></i></a>
 
         </div>
       </div>
