--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -66,16 +66,12 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#home" class="nav-link scrollto active"><i class="bx bx-home"></i>
-              <span>Home</span></a></li>
-          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a>
-          </li>
-          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
-              <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
-              <span>Portfolio</span></a></li>
-          <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i>
-              <span>Services</span></a></li>
+          <li><a href="index.html#home" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i><span>Portfolio</span></a></li>
+          <li><a href="index.html#MyPersonalityType" class="nav-link scrollto"><i class="bx bx-server"></i> <span>My Personality Type</span></a></li>
+          <li><a href="index.html#CoverLetter" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Cover Letter</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
