--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -176,6 +176,18 @@
       <div class="container">
 
         <div class="section-title">
+        <h2>배운 점</h2>
+        </div>
+        <div class="portfolio-description">
+          <p> 크롤링한 sns 데이터를 DB에 데이터를 저장하고 해당 데이터를 활용하여 분석하여 어떻게 하면 유저들에게 효과적인 시각화를 전달해줄 수 있을지에 대해 배우게 되었으며  spring mvc를 통해  백엔드를 구현하고  ajax를 통해 비동기통신을 프론트에서 구현하여 데이터가  서로 전달되는 구조를 다시 한번 복습하며 배우는 좋은 경험이 됐습니다.</p>
+        </div>
+        </div>
+    </section>
+
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="section-title">
           <h2>SNS 크롤링을 통한 실시간 웹 페이지 구성도</h2>
         </div>
 
