--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -176,7 +176,18 @@
 
       </div>
     </section><!-- End Portfolio Details Section -->
-    
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="section-title">
+        <h2>배운 점</h2>
+        </div>
+        <div class="portfolio-description">
+          <p> react를 통해 웹 페이지를 구현하면서 어떻게 하면 사용자가 만족할 만한 ui를 제공할 수 있을지에 대해 고민하고 공부하는 시간을 갖게되었고 컴포넌트와 렌더링에 대해서 자세히 배우게 되었으며 spring mvc를
+            경험하고 배우는 시간을 갖게 되었습니다.</p>
+        </div>
+        </div>
+    </section>
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
