--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -248,11 +248,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/데이터수집1.png" class="profileimg" alt="">
+                  <img src="assets/img/portfolio/데이터수집1.png"  alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/데이터수집2.png" class="profileimg" alt="">
+                  <img src="assets/img/portfolio/데이터수집2.png"  alt="">
                 </div>
 
 
@@ -307,7 +307,7 @@
             <div class="swiper-wrapper align-items-center">
 
               <div>
-                <img src="assets/img/portfolio/데이터전처리필터링.png" class="profileimg" alt="">
+                <img src="assets/img/portfolio/데이터전처리필터링.png"  class="profileimg" alt="">
               </div>
 
             </div>
