--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -240,15 +240,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/달런달런_db모델링.png" class="profileimg" alt="">
+                  <img src="assets/img/portfolio/달런달런_db모델링.png"  alt="">
                 </div>
 
                 <div class="swiper-slide" >
-                  <img src="assets/img/portfolio/달런달런_구성도.png"  class="profileimg"alt="">
+                  <img src="assets/img/portfolio/달런달런_구성도.png"  alt="">
                 </div>
 
                 <div class="swiper-slide" >
-                  <img src="assets/img/portfolio/달런달런_순서도.png"  class="profileimg"alt="">
+                  <img src="assets/img/portfolio/달런달런_순서도.png"  alt="">
                 </div>
 
 
@@ -280,11 +280,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/달런달런_노션.png" class="profileimg" alt="">
+                  <img src="assets/img/portfolio/달런달런_노션.png"  alt="">
                 </div>
 
                 <div class="swiper-slide" >
-                  <img src="assets/img/portfolio/달런달런_알로.png"  class="profileimg"alt="">
+                  <img src="assets/img/portfolio/달런달런_알로.png"  alt="">
                 </div>
 
                 
