--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -179,7 +179,7 @@
         <h2>배운 점</h2>
         </div>
         <div class="portfolio-description">
-          <p> 크롤링한 sns 데이터를 DB에 데이터를 저장하고 해당 데이터를 활용하여 분석하여 어떻게 하면 유저들에게 효과적인 시각화를 전달해줄 수 있을지에 대해 배우게 되었으며  spring mvc를 통해  백엔드를 구현하고  ajax를 통해 비동기통신을 프론트에서 구현하여 데이터가  서로 전달되는 구조를 다시 한번 복습하며 배우는 좋은 경험이 됐습니다.</p>
+          <p> 크롤링한 SNS 데이터를 MYSQL을 통해 DB에 데이터를 저장하고 해당 데이터를 활용하여 Word2vec 모델을 통해 분석하여 어떻게 하면 유저들에게 효과적인 시각화를 전달해줄 수 있을지에 대해 배움을 얻었으며, Spring MVC를 통해 백엔드부분을 구현하고 AJAX를 통한 비동기통신 통신을 HTML로 구현하여 데이터가 서로 전달되는 구조를 다시 한번 복습하며 배우는 좋은 경험이 됐습니다.</p>
         </div>
         </div>
     </section>
