--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -183,8 +183,7 @@
         <h2>배운 점</h2>
         </div>
         <div class="portfolio-description">
-          <p> react를 통해 웹 페이지를 구현하면서 어떻게 하면 사용자가 만족할 만한 ui를 제공할 수 있을지에 대해 고민하고 공부하는 시간을 갖게되었고 컴포넌트와 렌더링에 대해서 자세히 배우게 되었으며 spring mvc를
-            경험하고 배우는 시간을 갖게 되었습니다.</p>
+          <p> REACT를 통해 웹 페이지를 구현하면서 어떻게 하면 사용자가 만족할 만한 UI를 제공할 수 있을지에 대해 고민하고 공부하는 시간을 갖게 되었고 컴포넌트와 렌더링에 대해서 이해하고 Spring MVC를 경험하고 배우는 시간을 갖게 되었습니다. 이번 프로젝트는 총 6명의 팀원으로 구성되어 진행하였는데 팀원 수가 많은 만큼 서로의 의견을 공유하고 코드를 합치는 과정을 통해 Git, Notion에 관해 공부하는 좋은 경험을 하였습니다.</p>
         </div>
         </div>
     </section>
